--- a/index.html
+++ b/index.html
@@ -188,40 +188,29 @@
 
         <!-- Oyun ve Reklam Konteyneri -->
         <div class="game-play-container">
-            <!-- Sol Reklam -->
             <div class="ad-slot ad-slot-left">
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8468426148009047"
-                     crossorigin="anonymous"></script>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8468426148009047" crossorigin="anonymous"></script>
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-8468426148009047"
                      data-ad-slot="6299276159"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
-                <script>
-                     (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
+                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
             </div>
-
-            <!-- Oyun Alanı -->
             <div class="game-area">
                 <canvas id="game-canvas" width="400" height="500"></canvas>
                 <button id="pause-btn" class="pause-btn" title="Oyunu Duraklat">⏸️</button>
             </div>
-
-            <!-- Sağ Reklam -->
             <div class="ad-slot ad-slot-right">
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8468426148009047"
-                     crossorigin="anonymous"></script>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8468426148009047" crossorigin="anonymous"></script>
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-8468426148009047"
                      data-ad-slot="6299276159"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
-                <script>
-                     (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
+                <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
             </div>
         </div>
 
@@ -297,7 +286,6 @@
         </div>
     </div>
 
-    <!-- JavaScript -->
     <script src="app.js"></script>
 </body>
 </html>
