--- a/index.html
+++ b/index.html
@@ -16,8 +16,33 @@
     <meta name="format-detection" content="telephone=no">
     
     <link rel="stylesheet" href="style.css">
+        <!-- AdSense Başlangıcı -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8468426148009047"
+        crossorigin="anonymous"></script>
 </head>
 <body>
+        <!-- Sol Reklam -->
+    <div class="ad-section fixed left">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-8468426148009047"
+             data-ad-slot="7358041106"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>(adsbygoogle=window.adsbygoogle||[]).push({});</script>
+    </div>
+        <!-- Sağ Reklam -->
+    <div class="ad-section fixed right">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-8468426148009047"
+             data-ad-slot="7358041106"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>(adsbygoogle=window.adsbygoogle||[]).push({});</script>
+    </div>
+
+
     <!-- Loading Screen -->
     <div id="loading-screen" class="loading-screen">
         <div class="loading-content">
