--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
         <!-- Sol Reklam -->
     <div class="ad-section fixed left">
         <ins class="adsbygoogle"
-             style="display:block"
+             style="display:block; width:120px; height:600px;"
              data-ad-client="ca-pub-8468426148009047"
-             data-ad-slot="7358041106"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
+             data-ad-slot="7358041106">
+             </ins>
         <script>(adsbygoogle=window.adsbygoogle||[]).push({});</script>
     </div>
 
